Fixed alignment issue on index.

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@ nav a {
 .content { 
   text-align: left;
   float: left;
-  margin: 0 25px;
 }
 
 .content li{ 
